# projeto_dataops

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
dags/: dag_carregar_dados.py  dag_extrair_dados.py  dag_gerar_dados.py  dag_transformar_dados.py  dag_vendas_ano_mes.py  dag_vendas_estado.py  dag_vendas_modalidade.py  hello_world.py
data/extract/: mongo_export.json
data/transform/: data_transform_ano_mes.csv  data_transform_estado.csv  data_transform_modalidade.csv
docs/: microservice.md  roadmap.md
docs/export/: README.html
src/fastapi_app/: database.py  main.py  models.py
src/fastapi_app/routers/: ano_mes.py  cidade.py  modalidade.py
src/python/: carga_vendas_ano_mes.py  carga_vendas_estado.py  carga_vendas_modalidade.py  carregar_csv_postgres.py  extrair_dados.py  vendas_ano_mes.py  vendas_estado.py  vendas_modalidade.py
src/streamlit_dashboard/: dashboard.py  diagnostico.py  monitoramento.py
tests/: test_api.py
